# second-project

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
infra/: second-project_config.txt
infra/aws/: dev_deploy_to_ecs.sh  second-project_dev_infrastructure.txt
src/second-project/: lambda_handler.py  main.py
tests/: test_main.py
